--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     restart: always
     ports:
       - "5001:3000"
-    env_file:
-      - .env
+    environment:
+      DATABASE_URL: postgresql://myuser:mypassword@db:5432/mydatabase
     depends_on:
       - db
     volumes:
