--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-ws": "^11.0.15",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.0.7",
+    "@nestjs/websockets": "^11.0.15",
     "@prisma/client": "^6.6.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^6.4.1",
@@ -48,7 +50,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "stripe": "^17.7.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
