--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "firebase-admin": "^13.3.0",
     "libphonenumber-js": "^1.12.6",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
