--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,23 @@
-name: Deploy to VPS
+name: Deploy To VPS
 
 on:
-  push:
-    branches:
-      - main  # Trigger the workflow on push to 'main' branch
+    push:
+        branches:
+            - main
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up SSH
-      uses: appleboy/ssh-action@v0.1.5
-      with:
-        host: ${{ secrets.VPS_HOST }}
-        username: root  # Use your username if it's not root
-        password: ${{ secrets.VPS_PASSWORD }}
-        port: 22
-        script: |
-          # Go to your app directory
-          cd onurtaskiner/
-
-          # Pull latest changes from Git
-          git pull origin main
-
-          # Build and deploy with Docker Compose
-          docker-compose pull
-          docker-compose up -d --build
-
-          # Optionally, check the status of containers
-          docker-compose ps
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+            - name: Deploy to VPS via SSH
+              uses: appleboy/ssh-action@master
+              with:
+                  host: ${{ secrets.VPS_HOST }}
+                  username: root
+                  password: ${{ secrets.VPS_PASSWORD }}
+                  script: |
+                      cd ./onurtaskiner/onurtaskiner
+                      git pull origin main
+                      docker compose up -d --build
