--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,40 @@
 name: Deploy To VPS
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Deploy to VPS via SSH
-              uses: appleboy/ssh-action@master
-              with:
-                  host: ${{ secrets.VPS_HOST }}
-                  username: root
-                  password: ${{ secrets.VPS_PASSWORD }}
-                  script: |
-                      cd ./onurtaskiner/onurtaskiner
-                      git pull origin main
-                      docker compose up -d --build
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo (for local use only)
+        uses: actions/checkout@v2
+
+      - name: Deploy to VPS via SSH
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: root
+          password: ${{ secrets.VPS_PASSWORD }}
+          script: |
+            echo "🔐 Setting up Git credentials with PAT..."
+            git config --global credential.helper store
+            echo "https://${{ secrets.GH_PAT }}:x-oauth-basic@github.com" > ~/.git-credentials
+
+            echo "📁 Navigating to project directory..."
+            cd ~/onurtaskiner/onurtaskiner || (
+              echo "📦 Cloning repo for first-time setup..."
+              git clone https://github.com/your-username/your-repo.git ~/onurtaskiner/onurtaskiner
+              cd ~/onurtaskiner/onurtaskiner
+            )
+
+            echo "🔄 Pulling latest changes from main branch..."
+            git pull origin main
+
+            echo "🐳 Running docker-compose build and up..."
+            docker compose up -d --build
+
+            echo "✅ Deployment finished!"
