--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
           script: |
             cd ./onurtaskiner/onurtaskiner
             git pull origin main
-            docker compose up -d --build
+            docker-compose up -d --build
