--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,5 @@ jobs:
           
             cd ./onurtaskiner/onurtaskiner
             git pull origin main
-            docker-compose up -d --build
+            docker-compose up -d --build --no-cache
+
