--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,6 @@ jobs:
           
             cd ./onurtaskiner/onurtaskiner
             git pull origin main
-            docker-compose up -d --build --no-cache
+            docker-compose build --no-cache
+            docker-compose up -d
 
