--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
           
             cd ./onurtaskiner/onurtaskiner
             git pull origin main
+            docker-compose down
             docker-compose build --no-cache
             docker-compose up -d
 
