--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,6 @@ jobs:
             cd ./onurtaskiner/onurtaskiner
             git pull origin main
             docker-compose down
-            docker-compose build --no-cache
+            docker-compose build
             docker-compose up -d
 
