--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,28 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repo (for local use only)
         uses: actions/checkout@v2
 
-      - name: List files
-        run: ls -R
-
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker Compose services (local test)
-        run: |
-          docker-compose -f ./onurtaskiner/docker-compose.yml config
-          docker-compose -f ./onurtaskiner/docker-compose.yml build
-
       - name: Deploy to VPS via SSH
-        if: success()
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -40,9 +22,10 @@ jobs:
           script: |
             echo "💥 Cleaning up unused Docker resources..."
             docker system prune -a --volumes -f
-
-            cd ./onurtaskiner
+          
+            cd ./onurtaskiner/onurtaskiner
             git pull origin main
             docker-compose down
             docker-compose build
             docker-compose up -d
+
