--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           script: |
           
-            cd ./onurtaskiner/onurtaskiner
+            cd ./targetStriker_server
             git pull origin main
             docker-compose down
             docker-compose build
