--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,9 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           script: |
           
-            cd ./onurtaskiner/onurtaskiner
-            git pull origin main
-            docker-compose down
-            docker-compose build
-            docker-compose up -d
+              cd ./onurtaskiner/onurtaskiner
+              git pull origin main
+              docker-compose down -v --remove-orphans
+              docker-compose build
+              docker-compose up -d --build
 
