--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           
               cd ./onurtaskiner/onurtaskiner
               git pull origin main
-              docker-compose down -v --remove-orphans
+              docker-compose down --remove-orphans
               docker-compose build
               docker-compose up -d --build
 
