--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "rxjs": "^7.8.1",
     "stripe": "^17.7.0",
     "uuid": "^11.1.0",
+    "validator": "^13.15.0",
     "ws": "^8.18.1"
   },
   "devDependencies": {
